[package]
name = "cargo-version-upgrade"
version = "1.0.1"
edition = "2021"
exclude = [
    ".idea/*"
]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "cargo_version_upgrade"
path = "src/lib.rs"

[dependencies]
semver = "1.0.24"
toml_edit = "0.22.22"
clap = { version = "4.3", features = ["derive"] }

[dev-dependencies]
tempfile = "3.6"
