[package]
name = "cargo-version-upgrade"
version = "1.0.5"
edition = "2021"
authors = ["Harsh <harshpatel29301@gmail.com>", "Sailendra <sailendradash23@gmail.com>"]
description = "semantic version management"
repository = "https://github.com/DOLPHIN-SOFTWARE-TECH/cargo-version-upgrade.git"
license = "MIT OR Apache-2.0"
keywords=["semantic","version","upgrade","cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [
    ".idea/*"
]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "cargo_version_upgrade"
path = "src/lib.rs"

[dependencies]
semver = "1.0.24"
toml_edit = "0.22.22"
clap = { version = "4.3", features = ["derive"] }

[dev-dependencies]
tempfile = "3.6"
